# docs/swagger.yaml
@@ -1,4 +1,90 @@
+basePath: /api/v1
+definitions:
+  main.OperationType:
+    enum:
+    - DEPOSIT
+    - WITHDRAW
+    type: string
+    x-enum-varnames:
+    - Deposit
+    - Withdraw
+  main.Wallet:
+    properties:
+      balance:
+        type: number
+      walletId:
+        type: string
+    type: object
+  main.WalletRequest:
+    properties:
+      amount:
+        description: Сумма для операции
+        type: number
+      operationType:
+        allOf:
+        - $ref: '#/definitions/main.OperationType'
+        description: 'Тип операции: DEPOSIT или WITHDRAW'
+      walletId:
+        description: ID кошелька
+        type: string
+    type: object
+host: localhost:8080
 info:
   contact: {}
-paths: {}
+  description: API для управления кошельками
+  title: Wallet API
+  version: "1.0"
+paths:
+  /wallet:
+    post:
+      consumes:
+      - application/json
+      description: Создает новый кошелек или обновляет существующий в зависимости
+        от операции (DEPOSIT или WITHDRAW).
+      operationId: handleWallet
+      parameters:
+      - description: Wallet
+        in: body
+        name: wallet
+        required: true
+        schema:
+          $ref: '#/definitions/main.WalletRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.Wallet'
+        "400":
+          description: Invalid operation type
+          schema:
+            type: string
+      summary: Создание или обновление кошелька
+      tags:
+      - wallet
+  /wallets/{walletId}:
+    get:
+      description: Получает информацию о кошельке по его ID.
+      operationId: handleGetWallet
+      parameters:
+      - description: Wallet ID
+        in: path
+        name: walletId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.Wallet'
+        "404":
+          description: Wallet not found
+          schema:
+            type: string
+      summary: Получение информации о кошельке
+      tags:
+      - wallet
 swagger: "2.0"
